; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_v210enc.c_v210_planar_pack_10_c.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_v210enc.c_v210_planar_pack_10_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32*, i32)* @v210_planar_pack_10_c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @v210_planar_pack_10_c(i32* %0, i32* %1, i32* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %12, align 4
  br label %13

13:                                               ; preds = %35, %5
  %14 = load i32, i32* %12, align 4
  %15 = load i32, i32* %10, align 4
  %16 = sub nsw i32 %15, 5
  %17 = icmp slt i32 %14, %16
  br i1 %17, label %18, label %38

18:                                               ; preds = %13
  %19 = load i32*, i32** %7, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = call i32 @WRITE_PIXELS(i32* %19, i32* %20, i32* %21, i32 10)
  %23 = load i32*, i32** %6, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @WRITE_PIXELS(i32* %23, i32* %24, i32* %25, i32 10)
  %27 = load i32*, i32** %8, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = load i32*, i32** %7, align 8
  %30 = call i32 @WRITE_PIXELS(i32* %27, i32* %28, i32* %29, i32 10)
  %31 = load i32*, i32** %6, align 8
  %32 = load i32*, i32** %8, align 8
  %33 = load i32*, i32** %6, align 8
  %34 = call i32 @WRITE_PIXELS(i32* %31, i32* %32, i32* %33, i32 10)
  br label %35

35:                                               ; preds = %18
  %36 = load i32, i32* %12, align 4
  %37 = add nsw i32 %36, 6
  store i32 %37, i32* %12, align 4
  br label %13

38:                                               ; preds = %13
  ret void
}

declare dso_local i32 @WRITE_PIXELS(i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
